Cleaned up methods, added metric fetching

--- a/testMethods.ipynb
+++ b/testMethods.ipynb
@@ -21,35 +21,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
     "from importlib import reload\n",
-    "import sys\n",
-    "sys.path.append(\"/Users/joel/Documents/school/ASTR497/astr-302-homeworks-joelbd/final/AuGMod/\")\n",
-    "import augmod\n"
+    "from AuGMod import augmod"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<module 'augmod' from '/Users/joel/Documents/school/ASTR497/astr-302-homeworks-joelbd/final/AuGMod/augmod.py'>"
+       "<module 'AuGMod.augmod' from '/Users/joel/Documents/school/ASTR497/augmod/AuGMod/augmod.py'>"
       ]
      },
-     "execution_count": 60,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "source": [
-    "reload(augmod)"
-   ]
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -60,7 +56,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 98,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -73,19 +69,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
-   "metadata": {
-    "scrolled": false
-   },
-   "outputs": [],
-   "source": [
-    "# Test bulkCutOut with ra & dec\n",
-    "augmod.bulkCutOut(fileName, regions_ra_dec, fits_layer = 0, silent = True)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 99,
    "metadata": {
     "scrolled": false
    },
@@ -94,10 +78,52 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Made: A399_all_drc_650_3965.fits\n"
+      "Made: A399_all_drc_650_3965.fits\n",
+      "Made: A399_all_drc_312_3769.fits\n",
+      "Made: A399_all_drc_469_4079.fits\n",
+      "Made: A399_all_drc_1414_3990.fits\n",
+      "Made: A399_all_drc_1859_3696.fits\n",
+      "Made: A399_all_drc_3735_3808.fits\n",
+      "Made: A399_all_drc_3722_3729.fits\n",
+      "Made: A399_all_drc_3905_3681.fits\n",
+      "Made: A399_all_drc_4187_4157.fits\n",
+      "Made: A399_all_drc_2596_3186.fits\n",
+      "Made: A399_all_drc_850_3027.fits\n",
+      "Made: A399_all_drc_279_3197.fits\n",
+      "Made: A399_all_drc_357_3198.fits\n",
+      "Made: A399_all_drc_279_2991.fits\n",
+      "Made: A399_all_drc_3201_2520.fits\n",
+      "Made: A399_all_drc_3697_2452.fits\n",
+      "Made: A399_all_drc_2867_2742.fits\n",
+      "Made: A399_all_drc_3654_1631.fits\n",
+      "Made: A399_all_drc_251_1043.fits\n",
+      "Made: A399_all_drc_1021_255.fits\n",
+      "Made: A399_all_drc_1768_524.fits\n",
+      "Made: A399_all_drc_2327_1144.fits\n",
+      "Made: A399_all_drc_2244_1007.fits\n",
+      "Made: A399_all_drc_3265_921.fits\n",
+      "Made: A399_all_drc_3560_1411.fits\n",
+      "Made: A399_all_drc_2444_1641.fits\n",
+      "Made: A399_all_drc_2907_1638.fits\n",
+      "Made: A399_all_drc_1237_2084.fits\n",
+      "Made: A399_all_drc_1142_2085.fits\n",
+      "Made: A399_all_drc_1177_1599.fits\n",
+      "Made: A399_all_drc_393_1284.fits\n"
      ]
     }
    ],
+   "source": [
+    "# Test bulkCutOut with ra & dec\n",
+    "augmod.bulkCutOut(fileName, regions_ra_dec, fits_layer = 0, silent = False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "scrolled": false
+   },
+   "outputs": [],
    "source": [
     "# Test cutOut with single coordinates\n",
     "augmod.cutOut(fileName, test_ra, test_dec)"
@@ -112,7 +138,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -150,12 +176,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 80,
    "metadata": {},
    "outputs": [],
    "source": [
     "fileName = \"cropped/A399_all_drc_1177_1599.fits\"\n",
-    "fileOut = \"cropped/\"\n",
+    "fileOut = \"cropped\"\n",
     "imgRegion = \"1  101  1  101\"\n",
     "pltScale = \"0.05  0.05\"\n",
     "profile = \"sersic\"\n",
@@ -168,11 +194,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 88,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['gal_A399_all_drc_1177_1599.fits', 11.1211, 0.6381, 0.5962, 0.1003, 0.5133, 0.0286, 6.5072, 3.1865]\n",
+      "          Image           Effective Radius ... Position Angle Position Err\n",
+      "------------------------- ---------------- ... -------------- ------------\n",
+      "gal_A399_all_drc_1177_159          11.1211 ...         6.5072       3.1865\n"
+     ]
+    }
+   ],
    "source": [
-    "augmod.galfit(\n",
+    "data3 = augmod.galfit(\n",
     "    fileName, \n",
     "    fileOut, \n",
     "    imgRegion, \n",
@@ -184,6 +221,78 @@
     "    sersInd, \n",
     "    axisrat, \n",
     "    pixel_mask_image = \"cropped/mask_A399_all_drc_1177_1599.fits\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 89,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "&lt;Table length=1&gt;\n",
+       "<table id=\"table4632497568\" class=\"table-striped table-bordered table-condensed\">\n",
+       "<thead><tr><th>Image</th><th>Effective Radius</th><th>r_eff Err</th><th>Sersic Index</th><th>Sersic Err</th><th>Axis Ratio</th><th>Axis Err</th><th>Position Angle</th><th>Position Err</th></tr></thead>\n",
+       "<thead><tr><th>str25</th><th>str25</th><th>str25</th><th>str25</th><th>str25</th><th>str25</th><th>str25</th><th>str25</th><th>str25</th></tr></thead>\n",
+       "<tr><td>gal_A399_all_drc_1177_159</td><td>11.1211</td><td>0.6381</td><td>0.5962</td><td>0.1003</td><td>0.5133</td><td>0.0286</td><td>6.5072</td><td>3.1865</td></tr>\n",
+       "</table>"
+      ],
+      "text/plain": [
+       "<Table length=1>\n",
+       "          Image           Effective Radius ... Position Angle Position Err\n",
+       "          str25                str25       ...     str25         str25    \n",
+       "------------------------- ---------------- ... -------------- ------------\n",
+       "gal_A399_all_drc_1177_159          11.1211 ...         6.5072       3.1865"
+      ]
+     },
+     "execution_count": 89,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data3"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 97,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<module 'AuGMod.augmod' from '/Users/joel/Documents/school/ASTR497/augmod/AuGMod/augmod.py'>"
+      ]
+     },
+     "execution_count": 97,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "reload(augmod)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 96,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 96,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "os.path.isfile(\"cropped/A399_all_drc_1021_255.fits\")"
    ]
   },
   {
